feat: /consumer/goal/list を作成
