# backend/doc/openapi.yaml
@@ -28,6 +28,8 @@ tags:
     description: バッジを承認しているコンシューマの一覧
   - name: consumer framework list
     description: 指定したコンシューマIDの育成指標一覧
+  - name: consumer goal list
+    description: コンシューマに関連する教育指標および成長段階の取得
   - name: consumer badges list
     description: 各コンシューマに関連する教育指標および成長段階ならびにバッジ一覧取得
 paths:
@@ -337,16 +339,45 @@ paths:
                   $ref: '#/components/schemas/Framework'
         '400':
           description: Invalid ID supplied
+  /consumer/goal/list:
+    get:
+      tags:
+        - consumer goal list
+      description: コンシューマに関連する教育指標および成長段階を取得します
+      operationId: findConsumerGoalList
+      parameters:
+        - name: Authorization
+          in: header
+          description: 成長段階のパスワードを指定し、一致するデータを取得します
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ConsumerBadge'
+        '400':
+          description: Invalid password supplied
   /consumer/badges/list:
     get:
       tags:
         - consumer badges list
-      description: 各コンシューマに関連する教育指標および成長段階ならびにバッジ一覧取得を取得します
+      description: コンシューマに関連する教育指標および成長段階ならびにバッジ一覧取得を取得します
       operationId: findConsumerBadgesList
       parameters:
-        - name: goal_id
+        - name: framework_id
           in: query
-          description: goal id
+          description: framework id
+          required: true
+          schema:
+            type: number
+        - name: stage_id
+          in: query
+          description: stage id
           required: true
           schema:
             type: number
@@ -688,6 +719,9 @@ components:
     ConsumerBadge:
       type: object
       properties:
+        goal_id:
+          type: integer
+          example: 1
         consumer_name:
           type: string
           example: consumer101
